refactor(affection): 优化情绪值计算逻辑
- 使用 Math.clamp 方法简化情绪影响值的边界限制
- 简化情绪值更新时的最大最小值控制逻辑
- 移除多余的字符串转换操作，直接使用原始类型进行比较